# R-type

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  requirements.txt  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CI.yml  DeployCICD.yml  PushPrivateRepoCICD.yml  TestCICD.yml
ansible/: playbook.yml
client/: CMakeLists.txt  Makefile  RTypeClientGraphics.cpp  RTypeClientGraphics.hpp  cmake_install.cmake  main.cpp
client/core/: Config.hpp  core.hpp
client/game/: Game.cpp  Game.hpp
client/gameComponents/: RenderComponent.hpp  backgroundComponent.hpp
client/graphicUtils/entities/: Entity.hpp
client/graphicUtils/entities/Enemy/: Enemy.hpp
client/graphicUtils/entities/Player/: Player.hpp
client/graphicUtils/entities/Projectile/: Projectile.cpp  Projectile.hpp
client/graphicUtils/input/: Inputs.hpp
client/graphicUtils/input/button/: Button.cpp  Button.hpp
client/graphicUtils/input/selectBar/: SelectBar.cpp  SelectBar.hpp
client/graphicUtils/input/textInput/: TextInput.cpp  TextInput.md
client/input/: Inputs.hpp
client/input/button/: Button.cpp  Button.hpp  button.md
client/input/selectBar/: SelectBar.cpp  SelectBar.md
client/input/textInput/: TextInput.cpp  TextInput.hpp  TextInput.md
client/manager/: ResourceManager.cpp  ResourceManager.hpp
client/menu/: Inputs.hpp  Menu.cpp  Menu.hpp  TextInput.cpp  TextInput.hpp
client/menu/button/: Button.cpp  Button.hpp
client/network/: Client.hpp  NetworkManager.cpp  NetworkManager.hpp
client/scene/: Scene.hpp
client/scene/Game/: GameScene.cpp  GameScene.hpp
client/scene/Home/: Home.cpp  Home.hpp
client/systems/: AnimationSystem.cpp  AnimationSystem.hpp  BackgroundSystem.cpp  BackgroundSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
client/utils/: GameState.hpp  UiHelpers.hpp
clientECS/: CMakeLists.txt  main.cpp
clientECS/GameEngine/: Game.cpp  Game.hpp
clientECS/game/: Game.cpp  Game.hpp
clientECS/gameComponents/: RenderComponent.hpp
clientECS/manager/: ResourceManager.cpp  ResourceManager.hpp
clientECS/network/: NetworkManager.cpp  NetworkManager.hpp
clientECS/systems/: AnimationSystem.cpp  AnimationSystem.hpp  NetworkSystem.cpp  NetworkSystem.hpp  RenderSystem.cpp  RenderSystem.hpp
docs/: Doxyfile  _a_engine_8hpp.html  _a_engine_8hpp__incl.map  _a_engine_8hpp__incl.md5  _a_engine_8hpp_source.html  _a_network_8hpp.html  _a_network_8hpp__dep__incl.map  _a_network_8hpp__incl.map  _a_network_8hpp__incl.md5  _a_network_8hpp_source.html  _animation_system_8cpp.html  _animation_system_8cpp__incl.map  _animation_system_8cpp__incl.md5  _animation_system_8hpp.html  _animation_system_8hpp__dep__incl.map  _animation_system_8hpp__incl.map  _animation_system_8hpp__incl.md5  _animation_system_8hpp_source.html  _background_system_8cpp.html  _background_system_8cpp__incl.map  _background_system_8cpp__incl.md5  _background_system_8hpp.html  _background_system_8hpp__dep__incl.map  _background_system_8hpp__dep__incl.md5  _background_system_8hpp__incl.map  _background_system_8hpp__incl.md5  _background_system_8hpp_source.html  _button_8cpp.html  _button_8cpp__incl.map  _button_8cpp__incl.md5  _button_8hpp.html  _button_8hpp__dep__incl.map  _button_8hpp__dep__incl.md5  _button_8hpp__incl.map  _button_8hpp__incl.md5  _button_8hpp_source.html  _c_o_d_i_n_g___c_o_n_v_e_n_t_i_o_n_s_8md.html  _component_8hpp.html  _component_8hpp__dep__incl.map  _component_8hpp__dep__incl.md5  (+1070 more)
docs/html/: _a_engine_8hpp__incl.md5  _a_network_8hpp.html  _a_network_8hpp__dep__incl.md5  _a_network_8hpp_source.html  _animation_system_8cpp__incl.map  _animation_system_8hpp_source.html  _background_system_8hpp__incl.map  _c_make_c_x_x_compiler_id_8cpp.html  _component_8hpp.html  _component_8hpp_source.html  _entity_8hpp__dep__incl.map  _entity_8hpp__dep__incl.md5  _entity_8hpp__incl.md5  _entity_manager_8cpp__incl.md5  _entity_manager_8hpp.html  _entity_manager_8hpp__incl.md5  _game_8hpp.html  _game_8hpp__incl.map  _game_8hpp_source.html  _game_engine_8cpp.html  _game_engine_8cpp__incl.map  _game_engine_8hpp__dep__incl.md5  _game_engine_8hpp__incl.map  _i_component_8hpp.html  _i_component_8hpp__dep__incl.md5  _i_component_8hpp_source.html  _manager_8hpp__incl.md5  _mouvement_system_8hpp.html  _mouvement_system_8hpp_source.html  _render_system_8cpp__incl.md5  _render_system_8hpp__dep__incl.map  _render_system_8hpp_source.html  _resource_manager_8cpp__incl.map  _resource_manager_8hpp__dep__incl.md5  _resource_manager_8hpp__incl.map  _resource_manager_8hpp_source.html  _shoot_system_8hpp.html  _shoot_system_8hpp__incl.map  _shoot_system_8hpp__incl.md5  _shoot_system_8hpp_source.html  (+127 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  enums_0.js  (+67 more)
doxygenConfig/: CODING_CONVENTIONS.md  Doxyfile  contentCreationGuide.md  conventions.md  mainPage.md  spawnLogic.md
output/html/: _a_engine_8hpp.html  _a_engine_8hpp__incl.map  _a_engine_8hpp_source.html  (+426 more)
server/: CMakeLists.txt  Makefile  ServerManager.hpp  cmake_install.cmake  main.cpp  r-type_server
server/database/: DatabaseManager.cpp  DatabaseManager.hpp  ScoreRepository.cpp  ScoreRepository.hpp  UserRepository.cpp  UserRepository.hpp
server/game/: GameEngine.cpp  GameEngine.hpp  MovementSystem.cpp  MovementSystem.hpp
server/manager/: Manager.cpp  Manager.hpp
server/network/: NetworkManager.cpp  NetworkManager.hpp
shared/: CMakeLists.txt
shared/abstracts/: AEngine.hpp  ANetwork.hpp
shared/ecs/: Component.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  IComponent.hpp  SparseArray.hpp
shared/game/: PlayerInfo.hpp
shared/network/: packetType.hpp
shared/systems/: MouvementSystem.hpp  ShootSystem.hpp  System.hpp
utils/: testServer.py
(+558 files in other folders)
